--- a/WebFeInterface/index.html
+++ b/WebFeInterface/index.html
@@ -50,14 +50,14 @@
                         </div>
 
                         <div class="form-group">
-                            <label style="margin-left: 20px;" for="exampleFormControlSelect1"><strong>Select Action</strong></label>
+                            <label style="margin-left: 20px;" for="exampleFormControlSelect1"><strong>Object type</strong></label>
                             <select class="form-control" disabled id="exampleFormControlSelect1" onchange="setTypeInputParameter(this)">
                                 <option>Module</option>
                                 <option>Subject 1</option>
                                 <option>Subject 2</option>
                                 <option>Subject 3</option>
                             </select>
-                            <input type="number" class="form-control inp-chs-module-id" name="chosenModuleID" onchange="setInputParameter(this)" placeholder="Chosen module ID" value="" />
+                            <input type="" class="form-control inp-chs-module-id" name="chosenModuleID" onchange="setInputParameter(this)" placeholder="Chosen module ID" value="" />
                         </div>
 
                         <div class="form-group separator"></div>
@@ -68,13 +68,13 @@
                                 <option>Female</option>
                             </select>
                             <input type="text" class="form-control inp-age" name="age" onchange="setInputParameter(this)" placeholder="Age" value="" />
-                            <input type="number" class="form-control inp-avg-grade" name="averageGrade" onchange="setInputParameter(this)" placeholder="Average grade" value="" />
+                            <input type="number" step="0.01" class="form-control inp-avg-grade" name="averageGrade" onchange="setInputParameter(this)" placeholder="Average grade" value="" />
                             <input type="number" class="form-control inp-final-grade" name="finalGrade" onchange="setInputParameter(this)" placeholder="Final grade" value="" />
                             <input type="number" class="form-control inp-number-ofy-studied" name="numberOfYearsStudied" onchange="setInputParameter(this)" placeholder="Number of years studied" value="" />
                             <input type="number" class="form-control inp-year-study-start" name="studyStartYear" onchange="setInputParameter(this)" placeholder="Study start year" value="" />
-                            <input type="number" class="form-control inp-avg-test-taken" name="averageNumberOfTestTaken" onchange="setInputParameter(this)" placeholder="Average number of test taken" value="" />
+                            <input type="number" step="0.01" class="form-control inp-avg-test-taken" name="averageNumberOfTestTaken" onchange="setInputParameter(this)" placeholder="Average number of test taken" value="" />
                             <input type="number" class="form-control inp-max-test-taken" name="maximumNumberOfTestTaken" onchange="setInputParameter(this)" placeholder="Maximum number of test taken" value="" />
-                            <input type="number" class="form-control inp-avg-ovf-exam" name="averageNumberOfOverflowExams" onchange="setInputParameter(this)" placeholder="Average number of overflow exams" value="" />
+                            <input type="number" step="0.01" class="form-control inp-avg-ovf-exam" name="averageNumberOfOverflowExams" onchange="setInputParameter(this)" placeholder="Average number of overflow exams" value="" />
                         </div>
                         <div class="form-group execute-button">
                         <div class="row">
